--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "nodemon ./index.js",
-    "test": "mocha --recursive --exit"
+    "test": "nodemon --exec mocha -R min"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,11 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
+    "express-validator": "^6.4.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
+    "redis": "^3.0.2",
     "router": "^1.3.4"
   }
 }
